--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
     <!-- Contact Section Ends Here -->
      <footer>
         <p class="scroll-scale">
-            Copyrights &copy; 2025 All Rights Reserved || Ankit Singh Rajput
+            Copyrights &copy; 2025 All Rights Reserved || Sewak Ram Bramhdev
         </p>
         <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
      </footer>
